# ChangeLog for dev-php5/ZendFramework
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.66 2010/04/03 12:43:18 gurligebis Exp $

*ZendFramework-1.10.3 (03 Apr 2010)

  03 Apr 2010; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.10.2.ebuild, +ZendFramework-1.10.3.ebuild:
  Bumping to 1.10.3, fixing bug #312715

  02 Mar 2010; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  ZendFramework-1.7.5.ebuild, ZendFramework-1.8.3.ebuild,
  -ZendFramework-1.9.2.ebuild, -ZendFramework-1.9.2-r1.ebuild,
  -ZendFramework-1.9.6.ebuild, ZendFramework-1.9.7.ebuild,
  -ZendFramework-1.10.0.ebuild, -ZendFramework-1.10.1.ebuild,
  ZendFramework-1.10.2.ebuild:
  Removing old versions and fixing spelling error - bug #284314

  02 Mar 2010; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  ZendFramework-1.7.5.ebuild, ZendFramework-1.8.3.ebuild,
  ZendFramework-1.9.2.ebuild, ZendFramework-1.9.2-r1.ebuild,
  ZendFramework-1.9.6.ebuild, ZendFramework-1.9.7.ebuild,
  ZendFramework-1.10.0.ebuild, ZendFramework-1.10.1.ebuild,
  ZendFramework-1.10.2.ebuild:
  Fixing spelling error - bug #284314

*ZendFramework-1.10.2 (02 Mar 2010)

  02 Mar 2010; Ben de Groot <yngwin@gentoo.org>
  +ZendFramework-1.10.2.ebuild:
  Version bump

*ZendFramework-1.10.1 (12 Feb 2010)

  12 Feb 2010; Ben de Groot <yngwin@gentoo.org>
  +ZendFramework-1.10.1.ebuild:
  Version bump

*ZendFramework-1.10.0 (03 Feb 2010)

  03 Feb 2010; Ben de Groot <yngwin@gentoo.org>
  +ZendFramework-1.10.0.ebuild:
  Version bump

*ZendFramework-1.9.7 (20 Jan 2010)

  20 Jan 2010; Ben de Groot <yngwin@gentoo.org> +ZendFramework-1.9.7.ebuild:
  Version bump

*ZendFramework-1.9.6 (14 Dec 2009)

  14 Dec 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  +ZendFramework-1.9.6.ebuild:
  Bumping to 1.9.6 and installing the dojo toolkit, fixing bug 270252.

*ZendFramework-1.9.2-r1 (21 Sep 2009)
