@@ -1,32 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST ZendFramework-1.10.3-apidoc.tar.gz 7334570 RMD160 857210b7b72336f01fa9274d39fc6218d5304185 SHA1 7d637f39370f8a882fc9e1da6ccfc83c45672794 SHA256 fee046db7546b27f7a5d21db14ae3e84e30d2fc3344d6087ef2de32ac31fab77
-DIST ZendFramework-1.10.3-manual-en.tar.gz 3322221 RMD160 cde2314c29b8ae8a1ac33316274ee4d8088bbeab SHA1 51cf9354dd5ba104e2df8bab27e8faba56cd11e5 SHA256 cb22d2e5800df9b52ea04629ea257de6b9cce5e1179802bdb9e3d962de495a9c
-DIST ZendFramework-1.10.3-minimal.tar.gz 3579870 RMD160 3fbcb587b0ee195ce0d62143b3bb0bf5c5ca0b03 SHA1 389055b82fe0804ea49042d4428b97e8b9d10b4b SHA256 e243d47d8c7d68efce823c36c844fa973b9ab34a7255354196f683cd3c07b2c0
-DIST ZendFramework-1.10.3.tar.gz 18729143 RMD160 2d168fd72a62671ac6501570c61c3e5f1aafefff SHA1 7ce7a964f5c761061550097bce8448891a2edd5c SHA256 1a9dfe7ad089c50ce6074c8d867010768fc9489d39731f09694447260c70e6f9
+DIST ZendFramework-1.10.7-apidoc.tar.gz 7411414 RMD160 c16922f034d92a2a685ea6eba66a9447cc7a4570 SHA1 5070aed2af856c668040bcf14b24d9cd40908c53 SHA256 8484fdb8dcb5b505547bcfc0cbd763a8c515ad45113f04178e91c0ffeb29fae9
+DIST ZendFramework-1.10.7-manual-en.tar.gz 3340442 RMD160 352ec26314f01d0cd8c95d61e0b3a89c3dd832b2 SHA1 3f59c41dada9e8ff6b28739398bce2253e6c2117 SHA256 83b7e2a42937c769fb4d9fb2c7681364f10ee5c84defed4315250b165ca9f6b8
+DIST ZendFramework-1.10.7-minimal.tar.gz 3609724 RMD160 3ea5bb8cb5814efbf0d971802ba06520694a2722 SHA1 afe4bcd5acec4060907f8a51b6d1ab25ee62db22 SHA256 11f04c024e524b6396df1de2b7d3221ab5666a284b3056c5ead4bdc994d268a5
+DIST ZendFramework-1.10.7.tar.gz 18859249 RMD160 a93518d99b259fec51e066607b32bb0ef9eaa977 SHA1 f847e679d4a3d72fe5bb10515b2a835edc61cf57 SHA256 4089038b2817d283d355751acc770271b5a7bd1bbd2fab28045b81dc556d3277
 DIST ZendFramework-1.7.5-apidoc.tar.gz 4907260 RMD160 684773c9314361495c079a005b85b10468d6617c SHA1 bac648a9caa05d0afad1fb8bf14ff0a1c26f320f SHA256 10bb3ec7d3057baa9d9f20e82304bb72fd63b750771d00c9c112490dd9841624
 DIST ZendFramework-1.7.5-manual-en.tar.gz 1194554 RMD160 2354f57a18e6803f75a0fb2f3e48380cd664e480 SHA1 a10455cca14bad3848019369cdcf5d1db0ee1dc7 SHA256 2fab39b3b5e30c66d44e9ec5e4b88fef48a627fb2259aad58d555a3cdeabbb73
 DIST ZendFramework-1.7.5-minimal.tar.gz 2578136 RMD160 0d0371a7fdb1ce84390ec54b0f2f5478305261df SHA1 118f511b039a9f2cac2d68064392de3af544f4a8 SHA256 d74455ac522bc1e15a206b95c4571e2c3b41a4a33c2020a9252fab5fbdcb8a8b
 DIST ZendFramework-1.7.5.tar.gz 21238396 RMD160 147572e320d851ba2118e4a0f924cda7066bb02a SHA1 3a719ab49d7d200585eda2638bcb8eedd5d07788 SHA256 16559635e591af04f01ea66a2ad98dbdd39c75a890f4301611517b799916c62f
-DIST ZendFramework-1.8.3-apidoc.tar.gz 5693906 RMD160 ed4259f2cfa48eea02cc3166bf966acfa87c8cab SHA1 952f9f2f9cc417be147ba6ba2109e85b617f2fd3 SHA256 b856d7a3f84b75887b2f5f52af23b7f1cd9c11090e4569fb00345f1eebda0dd6
-DIST ZendFramework-1.8.3-manual-en.tar.gz 1504606 RMD160 decdaade0de0821083012c9ea9cefbd556086e0b SHA1 e753f54de4b9cf46a59fea62e35a564b831f4579 SHA256 69396d0fe7fd5f57a1539554f2ec9e1279a70e0a813c695793aa9df16cb6c037
-DIST ZendFramework-1.8.3-minimal.tar.gz 2937219 RMD160 4d4dc3a987d83b876bf8747a48f0c56e06423893 SHA1 85b75b0564a2fec5c15844706644b0d8e1756a78 SHA256 9d190d572964029064de5a37f96cb87133389369835a861e24dd74fc2d7cc56c
-DIST ZendFramework-1.8.3.tar.gz 40091777 RMD160 e6fe6ecec13a982e9d99c57ed89554eeead25ebe SHA1 58141f6d1b0f7c3ae5ca34f3465a20733909d291 SHA256 27701e0a580023d79b18c924ce69c43f807e0c59f86a18bbdad890b4f271c311
-DIST ZendFramework-1.9.7-apidoc.tar.gz 6305799 RMD160 05c6e952ce7dabdf19bf37c6675858317d8a12b6 SHA1 67c718714103714a3b188a09801ec0bd13735d99 SHA256 b149859996158ecc90508cae0aeb3b8faab77523e349386b1b06a36e83cf0612
-DIST ZendFramework-1.9.7-manual-en.tar.gz 1665227 RMD160 365870c9398b28379616a76aafcd5e8ac956ea2d SHA1 6bdc82ecb2226ff1cf348f0a16e01b77a00fa33b SHA256 d40c35d45b6889c36dd28d4e775c2fb34d26e85e5d1011ebefeb931e9bd77aa9
-DIST ZendFramework-1.9.7-minimal.tar.gz 3353008 RMD160 2fa26c26328bfa3f9aebfa904b85f6d9ebd41bab SHA1 53bed845cbe247d433f570107f574473afe6e67a SHA256 32e40970a89d771c8d47eb7ddb40997fd00ce6a59e1589d2dcea6e2cd4afaad2
-DIST ZendFramework-1.9.7.tar.gz 40778956 RMD160 eb3ed29b1232f15b9e6fd212b08925ae941d6ca2 SHA1 65558a2af5130cd5ea98c4abb446be27ce7ee2bd SHA256 94b5f1bbe8d5121c3430e0540c826b4abe8d2d5c34f754615a0f403cad84f5cc
-EBUILD ZendFramework-1.10.3.ebuild 2038 RMD160 07a56f37647a36ead595d999c05d03acc28a40b4 SHA1 8e2567abe2287a5bff88d0dae701c6b60f71c231 SHA256 51f4e48477f11f3ff2f8649222253f1e54a9b234cebd2d12761ce04000559f8f
+EBUILD ZendFramework-1.10.7.ebuild 2038 RMD160 ce1fd5e40bf03c0fa0711ec45d5bf045f1a253a5 SHA1 0ef90268b6113cdf7ee285e0f40be5bfd7b0e65e SHA256 a0d026fc38f6d17677b9e8a0714d149eafba5dda1669e3dce6d34eb1d742057c
 EBUILD ZendFramework-1.7.5.ebuild 1726 RMD160 8572dd3c34ad5e3350f67fd8dedd2b08783a8a30 SHA1 646af04650c329088c638c8f49eea08ad4e95c97 SHA256 d6174edfaa8fa86bd0eec35452fc250217dc7645c20aeee0d90b02501cb443f9
-EBUILD ZendFramework-1.8.3.ebuild 2002 RMD160 f6a5608c54b4d7c22c03b8c986b5aaf1e8059b2d SHA1 e0cd1ae47bbf6d4c9cb86f1dc6093ef04c856fa8 SHA256 32a06846596b5c4b6fe4a116a6ff771dee78646501506fcccb18452ab579ca6c
-EBUILD ZendFramework-1.9.7.ebuild 2037 RMD160 b4c426476279c4389976f26f68d2f9a8f8300e58 SHA1 9d24a541e202b71e2e7d7d7d89b3f48e19f06c20 SHA256 c5e7dff2da0ca7db6e61adf959f0798eae7ec91ed67e02699e7fb423185f0af1
-MISC ChangeLog 11214 RMD160 6efe60403ff557db038f3550920d58e9aa891cd4 SHA1 a04e5028a60f226247e81f66f5aaf0401a91ad68 SHA256 9e8d308ceccfd5ea96858f755e6f6d2927e2ede7f82e143ea973f9f4fce37a0c
+MISC ChangeLog 11492 RMD160 4ec0d396c5c4b4f751f6140db9dc14e375b97bc5 SHA1 31bd5ed7e1cfd605f9fad79b76e42434e264f96f SHA256 b63c283d78c73cee42ae0fd0a026912d425b01d599f9f2f253979a083cad4200
 MISC metadata.xml 523 RMD160 129ba00df70b4e9d7ccb7b8dc828e9406f9e312d SHA1 f5e9925403974e649a44402617249bb9dcc34f92 SHA256 ea4383a6e685b9e68b44e3edf3494439ecaf4ac56e4bf1bc3cd5dd5c6427ccec
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAku3N/AACgkQsR7PQhRXYEkuogCcCL5v1j7kPuYmacnjtU4iumXc
-X/8AnAkF8q0FLj+pCXycCpLOriT8c6YA
-=eQIf
+iEYEARECAAYFAkxmZgIACgkQsR7PQhRXYEn3JgCffOe7/c9cKgdkobIfpLKPraOi
+ys4AmwZSTaO1FI8bGnKsUw7o6OQciv8F
+=7vA6
 -----END PGP SIGNATURE-----
